@@ -2,6 +2,7 @@ Version 0.2.8 (2018-11-22)
 -------------
 1.对象数组导出时包装类报类型转换错误bug
 2.对象数组导出类型为java.util.date时类型转换错误
+3.ExcelReader开放cacheSize和hotSize两个参数，用户可以根据实际情况重置参数以减少文件读取次数，以空间换取时间提交读取速度
 
 Version 0.2.7 (2018-11-19)
 -------------
